--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2? family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
+/*padronizações*/
 *{
   margin:0;
   padding: 0;
@@ -17,6 +18,21 @@ body{
     color: var(--dark);
     background: var(--white);
 }
+
+/*Logo         ---------------------*/
+.navigation .logo{
+    color: var(--red);
+    font-size: 35px;
+    font-weight: 10em;
+}
+.logo span{
+    color: var(--dark);
+}
+
+
+
+/*Menu Hamburguer ------------------*/
+
 .navigation{
     display:flex;
     align-items: center;
@@ -28,49 +44,43 @@ body{
     transition: all 0.5s;
     position: fixed;
 }
-.navigation .logo{
-    color: var(--red);
-    font-size: 1.7rem;
-    font-weight: 600;
-}
-.logo span{
-    color: var(--dark);
-}
+
+
+
 .navigation ul{
     display: flex;
-    align-items: center;
-    gap: 5rem;
+    align-items: center;/*posição de alinhamento*/
+    gap: 4rem;/*espaçamento entre letras*/
+    margin-top: 5px;
 }
 .navigation ul li{
     color: var(--dark);
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 500;
     transition: all 0.5s;
+    text-shadow: 1px 1px burlywood;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    padding: 5px;
 }
 .navigation ul li a:hover{
     color: var(--red);
+    text-shadow: 1px 1px black;
+    font-size: 18.5px;
 }
 .navigation i{
     cursor: pointer;
     font-size: 1.5rem;
 }
+
+/*estilo do cursor*/
 .menu{
     cursor:pointer;
     display:none;
 }
-.menu .bar{
-    display:block;
-    width: 28px;
-    height: 3px;
-    border-radius: 3px;
-    background: var(--dark);
-    margin: 5px auto;
-    transition: all 0.3s;
-}
-.menu .bar:nth-child(1),
-.menu .bar:nth-child(3){
-    background: var(--red);
-}
+
+
+
 .home{
     width: 100%;
     height: 100svh;
@@ -79,10 +89,13 @@ body{
     justify-content: space-between;
     padding:0px 10%;
 }
+
+
+/*
 .home-text{
     max-width: 37rem;;
 }
-.home-test .text-h4{
+.home-text .text-h4{
     font-size: 1.5rem;
     color:var(--red);
     margin-bottom: 1rem;
@@ -91,41 +104,93 @@ body{
     font-size: 4rem;
     margin-bottom: 1rem;
     line-height: 4rem;
-}
+}*/
+
 .home-text p{
     margin-bottom: 4rem;
 }
+
+/*botão "Order your" ----------*/
 .home-btn{
-    padding: 15px 45px;;
+    padding: 20px 22px;
     background: var(--red);
     color:var(--white);
     border-radius: 10px;
     font-weight: 700;
-    transition: all 0.5s;
+    transition: all 0.2s;
 }
+
 .home-btn:hover{
     background: #fc4c35;
 }
-.home-img img{
-    width: 100%;
+
+.home-btn:active{
+    box-shadow:  5px 5px 2px black;
 }
+
+
+/*.home-img img{
+    width: 100%;
+}*/
+
+/*Media Querie ----------------*/
 @media(max-width:785px) {
     .navigation{
-        padding: 18px 20px;
+        padding: 6px 6px;
+        margin-left: 5.5%;
+        width: 90%;
+        right: auto;
+        border-radius: 5px;
+    }
+}
+
+/*Hamburguer icon / Animação / Animation  ------------------*/
+.menu .bar{
+    display:block;
+    width: 40px;
+    height: 7px;
+    background: var(--dark);
+    margin: 5px auto;
+    transition: all 0.5s;
+}
+/*cores*/
+.menu .bar:nth-child(1),
+.menu .bar:nth-child(3){
+    background: var(--red);
+}
+
+
+/*Animação / Animation / Hamburguer Bar*/
+@keyframes hamburguer{
+    0%{border: px solid rgb(243, 236, 236);}
+    100%{
+        rotate: 20deg;
+        border: 1px solid rgb(243, 236, 236);
     }
 }
 .menu{
     display: block;
 }
-menu.ativo .bar:nth-child(1){
-    transform: translateY(8px) rotate(45deg);
+.menu.ativo .bar:nth-child(1){
+    animation-name: hamburguer;
+    animation-duration: 3s;
+    animation-direction: alternate-reverse;
+    animation-timing-function: linear;
 }
 .menu.ativo .bar:nth-child(2){
-    opacity: 0;
+    animation-name: hamburguer;
+    animation-duration: 2s;
+    animation-direction: alternate-reverse;
+    animation-timing-function: ease-in-out;
+
 }
 .menu.ativo .bar:nth-child(3){
-    transform: translateY(-8px) rotate(-45deg);
+    animation-name: hamburguer;
+    animation-duration: 3s;
+    animation-direction: alternate-reverse;
+    animation-timing-function: linear;
 }
+
 .nav-menu{
     position: fixed;
     right: -100%;
@@ -137,6 +202,11 @@ menu.ativo .bar:nth-child(1){
     gap: -10px;
     transition: 0.3s;
 }
+
+.border{
+    border: 1px solid black;
+    border-radius: 10px;
+}
 .nav-menu.ativo{
     right: 0;
 }
@@ -144,24 +214,25 @@ menu.ativo .bar:nth-child(1){
     margin: 16px 0;
 }
 /*Main*/
-.home{
-    padding: 100px 2%;
-    flex-direction: column;
-    text-align: center;
-    overflow: hidden;
-    gap: 5rem;
+
+.home .text-h1{
+    font-size:2.5rem;
+}
+
+.home-img img{
+    width: 100%;
+    min-width: 300px;
+    max-width: 600px;
+    margin-top: 50px;
+}
+
+/*.home{
+
 }
 .home .text-h4{
     font-size: 15px;
     color: var(--red);
 }
-.home .text-h1{
-    font-size:2.5rem;
-    line-height: 3rem;
-}
 .home p{
     font-size: 15px;
-}
-.home-img img{
-    width: 100%;
-}
+}*/
